--- a/src/cuadro.css
+++ b/src/cuadro.css
@@ -1,15 +1,25 @@
 .cuadro {
     height: 50px;
     width: 50px;
+    
 }
 .cuadro-negro{
-    background: rgb(71, 71, 71);
+    background: rgb(59, 59, 59);
     color: rgba(240, 248, 255, 0.876);
 }
 .cuadro-blanco {
-    background: rgba(255, 255, 255, 0.89);
+    background: rgb(214, 214, 196);
     
 }
 .pieza-blanca {
-    color: brown;
+    background-image: url(./peon.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.pieza-negra {
+    background-image: url(./peon-negro.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
